projet_gl/src/test/deca/context/valid/2_05/2_05_2_DeclField.deca
// Description:
//    Programme test si l'on peut déclarer des champs déclaré dans le superclass comme champ aussi 
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    int fieldOne;
}

class B extends A {
    boolean fieldOne;
}