projet_gl/src/test/deca/context/invalid/2_05/2_05_2_DeclField.deca
// Description:
//    Problème de déclaration de champ déclaré dans le superclass mais pas comme champ
//
// Resultats:
//    Ligne 14: 
// 
// Historique:
//    cree le 17/01/2024

class A {
    void getX() {}
}
class B extends A {
    int getX;
}
